sumo/tests/traci/ChangeRoute/InvalidNodeId/testclient_out.traci
TraCITestClient output file. Date: Mon Feb 02 15:11:22 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=3491.75 y=488.65

-> Command sent: <ChangeRoute>:
  NodeId=1 RoadId=e_m6 travelTime=1
.. Answered with error to command (48), [description: Can not retrieve node with ID 1]

-> Command sent: <SimulationStep>:
  TargetTime=2 PosFormat=1
----
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
----
Error while sending command: send failed: Software caused tcpip::Socket abort
